<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/grp1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_albums"
            android:icon="@drawable/ic_album_drawer_24dp"
            android:title="Albums    " />


        <item
            android:id="@+id/nav_tracks"
            android:icon="@drawable/ic_audiotrack_black_24dp"
            android:title="@string/nav_tracks" />

        <item
            android:id="@+id/nav_artists"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/nav_artist" />

        <item
            android:id="@+id/nav_genres"
            android:icon="@drawable/ic_headset_mic_black_24dp"
            android:title="@string/nav_genre" />


        <item
            android:id="@+id/nav_playlists"
            android:icon="@drawable/ic_playlist_play_black_24dp"
            android:title="@string/nav_playlist" />

        <item
            android:id="@+id/nav_folders"
            android:icon="@drawable/ic_folder_black_24dp"
            android:title="@string/nav_folder" />

    </group>

    <group
        android:id="@+id/grp2"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_sleep_timer"
            android:icon="@drawable/ic_query_builder_black_24dp"
            android:title="Sleep Timer" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share_black_24dp"
            android:title="Share" />

        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="Rate on Store" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="Settings" />

    </group>
</menu>
