<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroll_view_lyrics"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="false"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_static_lyric_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:paddingBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_view_lyric_static"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="5sp"
                    android:gravity="center"
                    android:text="@string/lyrics_loading"
                    android:textColor="@color/nowPlayingText"
                    android:textSize="20sp"
                    android:typeface="monospace" />

            </LinearLayout>

            <LinearLayout
                android:layout_margin="20dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:id="@+id/ll_dynamic_lyric_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


            </LinearLayout>

            <TextView
                android:id="@+id/text_view_lyric_status"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:text="@string/tap_to_refresh_lyrics"
                android:textColor="@color/nowPlayingText"
                android:textSize="20sp"
                android:typeface="monospace" />

            <com.wang.avi.AVLoadingIndicatorView
                android:id="@+id/loading_lyrics_animation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:indicatorName="BallGridPulseIndicator"
                />

            <EditText
                android:id="@+id/track_title_lyric_frag"
                android:visibility="gone"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/nowPlayingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:inputType="textNoSuggestions" />

            <EditText
                android:id="@+id/track_artist_lyric_frag"
                android:visibility="gone"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/nowPlayingText"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions" />

            <Button
                android:id="@+id/button_update_metadata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/nowPlayingText"
                android:background="@color/colorTransparent"
                android:foreground="@drawable/border_1dp"
                android:text="@string/update_tags"/>

            <TextView
                android:visibility="gone"
                android:paddingTop="10dp"
                android:id="@+id/update_track_metadata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:typeface="monospace"
                android:textSize="20sp"
                android:gravity="center"
                android:text="@string/lyrics_tag_update"
                android:textColor="@color/nowPlayingText"
                />



        </LinearLayout>

    </ScrollView>

</LinearLayout>